# cairn

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
cli/: README.md  pyproject.toml
cli/cairn_cli/: __init__.py  cli.py  serve.py
cli/tests/: test_cli.py
core/: README.md  pyproject.toml
core/cairn_core/: __init__.py  bills.py  convert.py  digest.py  embeddings.py  files.py  frontmatter.py  index.py  lifecycle.py  query.py  reco.py  retrieval.py  tags.py  tasks.py  templates.py  uni.py  workspace.py
core/tests/: test_bills.py  test_convert.py  test_core.py  test_embeddings.py  test_frontmatter.py  test_lifecycle.py  test_tasks.py
mcp-server/: README.md  pyproject.toml
mcp-server/cairn_mcp/: __init__.py  server.py
web/: README.md  pyproject.toml
web/cairn_web/: __init__.py
web/cairn_web/static/: app.js  index.html  styles.css
