[project]
name = "cairn-mcp"
version = "0.2.0"
description = "MCP server exposing Cairn's local-first file-organization tools to Claude Code, Codex, Cursor, and any MCP client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.6.0",
    "cairn-core>=0.2.0",
]

[project.scripts]
cairn-mcp = "cairn_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cairn_mcp"]

# During local development, resolve cairn-core from the sibling package.
[tool.uv.sources]
cairn-core = { path = "../core", editable = true }
