[project]
name = "cairn-web"
version = "0.2.0"
description = "Optional local web UI for the Cairn harness — a zero-build static app served by `cairn serve`."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cairn_web"]
artifacts = ["cairn_web/static/**"]
